--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <style>
 .button {
     width: 100px;
+    color: white;
+    box-shadow: 5px 3px;
+    border-radius: 10px;
+    background-color: #ff7d59;
+    background-image: linear-gradient(319deg, #ff7d59 0%, #ff583a 37%, #f4a698 100%);
 }
 
 </style>
@@ -23,15 +28,15 @@
         </div>
 
         <div>
-            <button class="button" onclick="buttonClick(this,'word1')">Always</button>
-            <button class="button" onclick="buttonClick(this,'word1')">Never</button>
+            <p><button class="button" onclick="buttonClick(this,'word1')">Always</button>
+            <button class="button" onclick="buttonClick(this,'word1')">Eternally</button>
             <button class="button" onclick="buttonClick(this,'word1')">Sometimes</button><br>
             <button class="button" onclick="buttonClick(this,'word2')">Never More</button>
             <button class="button" onclick="buttonClick(this,'word2')">Regularly</button>
             <button class="button" onclick="buttonClick(this,'word2')">Never</button><br>
-            <button class="button" onclick="buttonClick(this,'word3')">Never</button>
+            <button class="button" onclick="buttonClick(this,'word3')">Occasionally</button>
             <button class="button" onclick="buttonClick(this,'word3')">Evermore</button>
-            <button class="button" onclick="buttonClick(this,'word3')">Constantly</button>
+            <button class="button" onclick="buttonClick(this,'word3')">Constantly</button></p>
 
 
 
@@ -49,16 +54,13 @@
 </html>
 
 <!--Her er "oppskriften" :D
-
 TeamOppgave: 
 Lag en "WordChooserStory"
 Hints:
-
 This
 Onclick
 Functions
 Variabler
 innerHTML
-
 Skal vise fram et eksempel på et tenkt resultat i general når vi møtes der nå :D
 @Modul 1-->
