--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Word Puzzle</title>
 
-
+        
 
 <style>
 .button {
@@ -43,12 +43,14 @@
         </div>
 
         <script>
-
                 function buttonClick(word, place) {
                     var w = word.innerHTML;
                     document.getElementById(place).innerHTML = w;
                 }
 
+                function webSiteLink()  {
+                    
+                }
         </script>
     </body>
 </html>
